docs: add agent guidance